--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title></title>
 </head>
 <body>
+  Please enter the name for your reservation:<br>
+  <input id="input-name" type="text"/>
+  <button id="claim-btn" onclick="claimReservation()">Ok</button>
 
   <script src="main.js"></script>
 </body>
