--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Reservations</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-  Please enter the name for your reservation:<br>
-  <input id="input-name" type="text"/>
-  <button id="claim-btn" onclick="claimReservation()">Ok</button>
+  <div>
+    <h1>Welcome!</h1>
+    Please enter the name for your reservation:<br><br>
+    <input id="input-name" type="text"/>
+    <button id="claim-btn" onclick="claimReservation()">Claim</button>
+  </div>
 
   <script src="main.js"></script>
 </body>
