--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-  <div>
-    <h1>Welcome!</h1>
-    Please enter the name for your reservation:<br><br>
+  <div id="welcome">
+    <h1 class="blue">Welcome!</h1>
+    <p>Please enter the name for your reservation:</p>
     <input id="input-name" type="text"/>
-    <button id="claim-btn" onclick="claimReservation()">Claim</button>
+    <button id="claim-btn" class="blue" onclick="claimReservation()">Claim</button>
   </div>
 
   <script src="main.js"></script>
