--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
   <title></title>
+  <script src="main.js"></script>
 </head>
 <body>
-
-  <script src="main.js"></script>
+    <!-- <form>
+        <fieldset>
+        <legend> Enter input:</legend>
+        <input id="input" name="userInput" type="text" />
+        <button onclick="claimReservation(userInput)">submit</button>
+        <h1 id="live"></h1>
+        </fieldset>
+    </form> -->
 </body>
 </html>
