--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <script src="main.js"></script>
 </head>
 <body>
-    <!-- <form>
+    <form>
         <fieldset>
         <legend> Enter input:</legend>
         <input id="input" name="userInput" type="text" />
-        <button onclick="claimReservation(userInput)">submit</button>
-        <h1 id="live"></h1>
+        <button type="button"  onclick="claimReservation(userInput)">submit</button>
+        <h1 id="live">here</h1>
         </fieldset>
-    </form> -->
+    </form>
 </body>
 </html>
