--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <form>
         <fieldset>
-        <legend> Enter input:</legend>
+        <legend> Enter your reservation name:</legend>
         <input id="input" name="userInput" type="text" />
         <button type="button"  onclick="claimReservation(userInput)">submit</button>
         <h1 id="live">here</h1>
