replaced alert with appendChild

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 class="blue">Welcome!</h1>
     <p>Please enter the name for your reservation:</p>
     <input id="input-name" type="text"/>
-    <button id="claim-btn" class="blue" onclick="claimReservation()">Claim</button>
+    <button id="claim-btn" class="blue" onclick="claimReservation()">Check</button>
   </div>
 
   <script src="main.js"></script>
