--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Please enter the name for your reservation:</p>
     <input id="input-name" type="text"/>
     <button id="claim-btn" class="blue" onclick="claimReservation()">Check</button>
+    <p id="display-msg"></p>
   </div>
 
   <script src="main.js"></script>
